crates/bitnet-kernels/tests/snapshots/snapshot_wave19__cuda_batch_norm_config_default_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
BatchNormConfig {
    num_features: 64,
    eps: 1e-5,
    momentum: 0.1,
    affine: true,
    track_running_stats: true,
}
