crates/bitnet-kernels/tests/snapshots/snapshot_wave19__cuda_batch_norm_launch_config_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
CudaBatchNormConfig {
    num_features: 256,
    eps: 1e-5,
    momentum: 0.1,
}
