crates/bitnet-kernels/tests/snapshots/snapshot_wave19__cuda_layernorm_config_with_shape_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
LayerNormConfig {
    eps: 1e-5,
    normalized_shape: [
        768,
    ],
    elementwise_affine: true,
}
