crates/bitnet-kernels/tests/snapshots/snapshot_wave19__cuda_memory_pool_config_default_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
MemoryPoolConfig {
    initial_size: 67108864,
    max_size: 1073741824,
    block_size: 256,
    alignment: 256,
}
