crates/bitnet-kernels/tests/snapshots/snapshot_wave19__ffn_activation_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: variants
---
[
    GeLU,
    SiLU,
    ReLU,
]
