crates/bitnet-kernels/tests/snapshots/snapshot_wave19__ffn_config_silu_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
FfnConfig {
    hidden_dim: 2048,
    intermediate_dim: 5504,
    activation: SiLU,
}
