crates/bitnet-kernels/tests/snapshots/snapshot_wave19__fused_elementwise_launch_config_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
FusedElementwiseLaunchConfig {
    n: 2048,
    threads_per_block: 256,
}
